# ComputerGraphics

./: CMakeLists.txt  demo.cpp  main.cpp
include/: Camera.cpp  Shader.h  TriMesh.cpp  TriMesh.h
include/Camera/: Camera.cpp  Camera.h
include/Model/: Mesh.h  Model.h
include/Shader/: Shader.h
include/Texture/: Texture.cpp  Texture.h
include/glad/: glad.h
lab/labShaders/Lab_1/: dynamicTriangle.vsh
lab/labShaders/Mid/: vshader.glsl
lab/labShaders/lab2/: fshader.glsl  vshader.glsl
lab/labShaders/lab2.3/: vshader.glsl
lab/labShaders/lab2HomeWork/: fshader.glsl  vshader.glsl
lab/labShaders/lab3.3/: vshader.glsl
lab/labShaders/lab3HomeWork/: fshader.glsl
lab/src/: Lab_1.1.cpp  Lab_1.cpp  Lab_2.1.cpp  Lab_2.2.cpp  Lab_2.cpp  lab2HomeWork.cpp  lab3.1.cpp  lab3.2.cpp  lab3.3.cpp  lab3.4.cpp  lab3HomeWork.cpp
md/: 1.GLFW和GLAD的使用.md  2.画三角形.md  3.画矩形.md  4.GLM.md  5.纹理.md  6.MVP变换.md  7.基础光照.md  8.摄像机及其坐标系.md
shaders/: lightf.glsl  lightv.glsl
shaders/DynamicTriangle/: dynamicTriangle.fsh  dynamicTriangle.vsh
shaders/HelloTriangle/: triangle.fsh  triangle.vsh
shaders/Rectangle/: rectangle.fsh
shaders/basicLighting/: color.fsh  color.vsh
shaders/color/: color.fsh
shaders/directionalLight/: light.fsh  object.fsh  object.vsh
shaders/dotlightAttenuation/: light.fsh  object.fsh  object.vsh
shaders/glm/: glm.fsh  glm.vsh
shaders/lab/: vshader.glsl
shaders/lightMaps/: color.fsh  color.vsh  light.vsh
shaders/material/: color.fsh  light.fsh
shaders/matrix/: color.fsh  color.vsh  light.fsh  light.vsh
shaders/modelIntrodution/: object.fsh  object.vsh
shaders/modelWithBasicLighting/: light.vsh  object.fsh  object.vsh
shaders/mvp/: mvp.fsh  mvp.vsh
shaders/spotLight/: light.vsh  object.fsh
shaders/texture/: mixTexture.fsh  mixTexture.vsh  texture.fsh
src/: Shader.cpp  glad.c
tutorial/: 10_BasicLighting.cpp  11_Material.cpp  12_LightingMaps.cpp  12_Matrix.cpp  13_LightCasters_DirectionalLight.cpp  13_LightCasters_DotLightAttenuation.cpp  13_LightCasters_SpotLight.cpp  14_Model.cpp  14_ModelWithBasicLighting.cpp  1_HelloTriangle.cpp  1_HelloTriangle_UseClassShader.cpp  2_Rectangle.cpp  2_Rectangle_UseClassShader.cpp  3_DynamicTriangle.cpp  3_DynamicTriangle_UseClassShader.cpp  4_GLM.cpp  5_MixTexture.cpp  5_Texture.cpp  6_MVP_MatrixTransformation.cpp  7_3D.cpp  7_MoreCube.cpp  8_Camera.cpp  8_KeyBoardMove.cpp  8_MouseMove.cpp  8_MoveFree.cpp  9_Color.cpp
